# parkji30.github.io

./: .gitignore  Cargo.toml  README.md  Trunk.toml  dump.html  index.html  input.css  package.json  quickstart_ml.html  rustfmt.toml  styles.css  tailwind.config.js  useful_links.html
.github/workflows/: deploy.yml
Blog/: not_research.html
QuantumComputing/: homepage.html  qc_homepage.html  qubit.html
Research/: frameworks_benchmarks.html  qec.html
pkg/: package.json  starcraft_site.d.ts  starcraft_site.js  starcraft_site_bg.wasm  starcraft_site_bg.wasm.d.ts
src/: lib.rs  main.rs
src/components/: about_card.rs  ambient_text.rs  mod.rs  snowfall.rs
src/components/skyline/: bridge.rs  buildings.rs  cn_tower.rs  lake.rs  mod.rs  trees.rs
src/pages/: blog.rs  home.rs  inspirations.rs  mod.rs  research.rs
